<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:layout_margin="24dp"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".view.SplashActivity">

    <ImageView
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_gravity="center"
        android:src="@drawable/quotes_logo" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="56dp"
        android:fontFamily="@font/quote"
        android:text="@string/app_name"
        android:textSize="24sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:fontFamily="@font/quote"
        android:gravity="center"
        android:text="@string/translate"
        android:textSize="18sp" />

    <ListView
        android:id="@+id/listViewLanguages"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:layout_weight="1"
        android:listSelector="@drawable/listview_selector" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:divider="@drawable/vertical_divider"
        android:dividerPadding="12dp"
        android:orientation="vertical"
        android:showDividers="middle">

        <Button
            android:id="@+id/buttonContiuneWithLanguage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/quote"
            android:text="@string/contiune_with_xxx"
            android:textAllCaps="false"
            android:textSize="26sp"
            android:padding="10dp"
            android:visibility="gone" />

        <TextView
            android:id="@+id/buttonContiuneWithoutAutoTranslate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="8dp"
            android:layout_weight="1"
            android:fontFamily="@font/quote"
            android:gravity="center"
            android:padding="8dp"
            android:text="@string/contiune_without_auto_translate"
            android:textSize="17sp"
            android:letterSpacing="0.1"
            android:textStyle="bold" />
    </LinearLayout>

</LinearLayout>