<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/tools"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.SettingsActivity">

    <LinearLayout
        android:id="@+id/actionBar"
        android:layout_width="match_parent"
        android:layout_height="57dp"
        android:layout_marginTop="30dp"
        android:orientation="horizontal"
        android:paddingLeft="24dp"
        android:paddingRight="24dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="47dp"
                android:layout_height="47dp"
                android:layout_gravity="center"
                android:layout_marginRight="8dp"
                android:src="@drawable/quotes_logo" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/quote"
                android:text="@string/app_name"
                android:textSize="23sp"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="end"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageGoBack"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:src="@drawable/ic_baseline_arrow_back_24" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/relativeAdsArea"
        android:layout_below="@id/actionBar"
        android:orientation="vertical"
        android:padding="24dp">

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:elevation="16dp"
            android:fadingEdgeLength="4dp"
            android:hardwareAccelerated="true"
            app:cardCornerRadius="8dp"
            app:cardElevation="4dp"
            app:cardUseCompatPadding="true"
            app:contentPadding="16dp"
            card_view:cardElevation="4dp"
            card_view:cardUseCompatPadding="true">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/quote"
                android:text="@string/translate"
                android:textSize="16sp" />

            <Spinner
                android:id="@+id/spinnerLanguages"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp" />

        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:elevation="16dp"
            android:fadingEdgeLength="4dp"
            android:hardwareAccelerated="true"
            app:cardCornerRadius="8dp"
            app:cardElevation="4dp"
            app:cardUseCompatPadding="true"
            card_view:cardElevation="4dp"
            card_view:cardUseCompatPadding="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:fontFamily="@font/quote"
                    android:text="@string/your_favorites"
                    android:textSize="16sp" />

                <ListView
                    android:id="@+id/listViewFavorites"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:dividerHeight="1dp"
                    android:fillViewport="true"
                    android:visibility="gone" />

            </LinearLayout>

            <TextView
                android:id="@+id/txtNoFavorite"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:fontFamily="@font/quote"
                android:gravity="center"
                android:text="@string/no_favorite"
                android:textSize="20sp"
                android:visibility="gone" />

        </com.google.android.material.card.MaterialCardView>

    </LinearLayout>

    <RelativeLayout
        android:id="@+id/relativeAdsArea"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true">

        <!--
        <com.huawei.hms.ads.banner.BannerView
            android:id="@+id/huaweiBannerAdSettings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:visibility="gone" />
            -->

        <com.google.android.gms.ads.AdView xmlns:ads="http://schemas.android.com/apk/res-auto"
            android:id="@+id/googleBannerAdSettings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:visibility="gone"
            ads:adSize="SMART_BANNER"
            ads:adUnitId="ca-app-pub-8063240213539897/7248347129" />

    </RelativeLayout>

</RelativeLayout>